tf/sg/securitygroups.tf
provider "aws" {
  version = "~> 2.0"
  region  = "eu-central-1"
}

variable "vpc_id" {
  type = string
}

resource "aws_security_group" "ApplicationSG" {
  name        = "${terraform.workspace}-ApplicationSG"
  description = "Allow 8080"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    security_groups = ["${aws_security_group.LoadBalancerSG.id}"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "DatabaseSG" {
  name        = "${terraform.workspace}-DatabaseSG"
  description = "Allow 3306"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    security_groups = ["${aws_security_group.ApplicationSG.id}"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "LoadBalancerSG" {
  name        = "${terraform.workspace}-LoadBalancerSG"
  description = "Allow 80"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
}

output "ApplicationSG" {
  value = aws_security_group.ApplicationSG.id
}

output "DatabaseSG" {
  value = aws_security_group.DatabaseSG.id
}

output "LoadBalancerSG" {
  value = aws_security_group.LoadBalancerSG.id
}
